added stress scripts for experiments

--- a/cgroups/configsCgroup/squareIso.conf
+++ b/cgroups/configsCgroup/squareIso.conf
@@ -1,6 +1,6 @@
-group stress_group {
+group signal_group{
      cpuset {
-         cpuset.cpus=2,3;
+         cpuset.cpus=1;
          cpuset.mems=0;
      }
 }
