added small mods to benchmark tests

--- a/malloc_timer/Makefile
+++ b/malloc_timer/Makefile
@@ -2,4 +2,4 @@ CC=gcc
 CFLAGS=-lrt -lpthread
 
 all: main.c
-	$(CC) main.c timer.c $(CFLAGS)  -o a.out
+	$(CC) main.c ../timerlib/timer.c $(CFLAGS)  -o a.out
