--- a/cgroups/configsCgroup/stressIsolation_extra.conf
+++ b/cgroups/configsCgroup/stressIsolation_extra.conf
@@ -1,9 +1,11 @@
 group stress_group {
      cpuset {
-         cpuset.cpus=0,2;
+         cpuset.cpus=2,3;
          cpuset.mems=0;
      }
      memory{
      }
-     
+     cpuacct{
+         cpuacct.usage=0;
+     }
 }
